fix: simplify Docker setup and update CSP for external CDNs

--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -6,12 +6,12 @@ server {
 
     client_max_body_size 20M;
     
-    # Security headers
+    # Security headers with updated CSP
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; font-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdnjs.cloudflare.com unpkg.com; img-src 'self' data: cdnjs.cloudflare.com unpkg.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com unpkg.com fonts.googleapis.com; font-src 'self' data: cdnjs.cloudflare.com unpkg.com fonts.gstatic.com; connect-src 'self'; frame-ancestors 'self';";
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
