--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,10 @@ services:
         container_name: ppob_app
         restart: unless-stopped
         volumes:
-            - ./storage:/var/www/storage
             - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-            - ./.env:/var/www/html/.env
-            - app_public:/var/www/public
+            - app-data:/var/www
         env_file:
             - .env
-        networks:
-            - app-network
         depends_on:
             - db
         logging:
@@ -39,9 +35,7 @@ services:
             - "80:80"
         volumes:
             - ./docker/nginx/conf.d:/etc/nginx/conf.d
-            - app_public:/var/www/public:ro
-        networks:
-            - app-network
+            - app-data:/var/www:ro
         depends_on:
             - app
         logging:
@@ -49,20 +43,6 @@ services:
             options:
                 max-size: "10m"
                 max-file: "3"
-        healthcheck:
-            test:
-                [
-                    "CMD",
-                    "wget",
-                    "--quiet",
-                    "--tries=1",
-                    "--spider",
-                    "http://localhost",
-                ]
-            interval: 30s
-            timeout: 10s
-            retries: 3
-            start_period: 10s
 
     # PostgreSQL Service
     db:
@@ -78,23 +58,12 @@ services:
             - mysql_data:/var/lib/mysql
         ports:
             - "3306:3306"
-        networks:
-            - app-network
         logging:
             driver: "json-file"
             options:
                 max-size: "10m"
                 max-file: "3"
-        healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-            interval: 10s
-            timeout: 5s
-            retries: 5
-
-networks:
-    app-network:
-        driver: bridge
 
 volumes:
     mysql_data:
-    app_public:
+    app-data:
